// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en <GifGrid/> debe de mostrar items cuando se cargan imagenes useFechGifs con datos 1`] = `
<Fragment>
  <h3>
    luffy
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC-1234"
      key="ABC-1234"
      title="Imagen XD"
      url="https//localhost/imagen.jpg"
    />
  </div>
</Fragment>
`;

exports[`pruebas en <GifGrid/> debe de mostrar items cuando se cargan imagenes useFechGifs sin datos 1`] = `
<Fragment>
  <h3>
    luffy
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
